--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/yup": "^0.29.11",
     "nodemon": "^2.0.7",
@@ -15,6 +16,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
